--- a/External JS.html
+++ b/External JS.html
@@ -5,7 +5,7 @@
     <title>External JS</title>
 </head>
 <body>
-
+    <h1>Hello</h1>
     <script src="js/js-in-html-external.js"></script>
 </body>
 </html>
