--- a/loops.html
+++ b/loops.html
@@ -5,6 +5,6 @@
     <title>Loops</title>
 </head>
 <body>
-<script src="js/for_loops.js"></script>
+<script src="js/while.js"></script>
 </body>
 </html>
