Feat: Planets and Arrays

--- a/arrays-manipulation-lec.html
+++ b/arrays-manipulation-lec.html
@@ -5,6 +5,6 @@
     <title>Array-Manipulation</title>
 </head>
 <body>
-<script src="js/Array-Manipulation.js"></script>
+<script src="js/arrays-manipulation-lec.js"></script>
 </body>
 </html>
