--- a/external_js.html
+++ b/external_js.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>External JS</title>
-    <script src="js/external.js"></script>
 </head>
 <body>
-
+    <h1>Hello</h1>
+    <script src="js/js-in-html-external.js"></script>
 </body>
 </html>
