--- a/welcome.html
+++ b/welcome.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Welcome to Veridian Dynamics!</title>
+    <link rel="stylesheet" href="css/site.css">
 </head>
 <body>
     <header id="top">
-        <h1>Welcome to Veridian Dynamics!</h1>
+        <h1 class="fancy-header">Welcome to Veridian Dynamics!</h1>
         <a>At Veridian Dynamics, <b>we</b> solve </a><i>your</i> problems with <b><i>technology.</i></b>
         <hr>
     </header>
