--- a/welcome.html
+++ b/welcome.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <title>Welcome to Veridian Dynamics!</title>
     <link rel="stylesheet" href="css/site.css">
+    <style>
+        .fancy-header {
+            color: coral; /* single line comment */
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
-    <header id="top">
-        <h1 class="fancy-header">Welcome to Veridian Dynamics!</h1>
+    <header id="top" class="header">
+        <h1 style="color: red" class="fancy-header"> Welcome to Veridian Dynamics!</h1>
         <a>At Veridian Dynamics, <b>we</b> solve </a><i>your</i> problems with <b><i>technology.</i></b>
         <hr>
     </header>
