Feat:Selectors, CSS, Borders

--- a/welcome.html
+++ b/welcome.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <title>Welcome to Veridian Dynamics!</title>
     <link rel="stylesheet" href="css/site.css">
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+
+
     <style>
         .fancy-header {
             color: coral; /* single line comment */
@@ -18,7 +23,7 @@
         <hr>
     </header>
     <nav>
-        <section class="Core Values">
+        <section class="core_values">
             <h3>Core Values</h3>
             <ul>
                 <li>Competence</li>
@@ -50,7 +55,7 @@
         <img src="https://live.staticflickr.com/65535/49423103991_c8229ba39e_w.jpg" alt="Tims Shot">
 
         <h1>Our Product</h1>
-        <table>
+        <table >
             <tr>
                 <th>Product</th>
                 <th>Price</th>
