--- a/github.html
+++ b/github.html
@@ -8,14 +8,14 @@
 <body>
     <header>
         <img src="">
-        <img src="img/30x30.svg">
+        <img src="images/30x30.svg">
         <ul>
             <li>Pull requests</li>
             <li>Issues</li>
             <li>Marketplace</li>
             <li>Explore</li>
         </ul>
-        <img src="img/30x30.svg">
+        <img src="images/30x30.svg">
     </header>
 </body>
 
@@ -30,7 +30,7 @@
     <main>
         <a>Codeup's dev team</a>
         <section>
-            <img src="img/48x48.svg"><a href="">Kent Beck</a>
+            <img src="images/48x48.svg"><a href="">Kent Beck</a>
             <br>
             <a><b>Member</b></a>
             <br>
@@ -38,14 +38,14 @@
             <br>
         </section>
         <section>
-              <img src="img/48x48.svg"><a href="">Codeup Staff</a>
+              <img src="images/48x48.svg"><a href="">Codeup Staff</a>
             <br>
               <a><b>Member</b></a>
             <br>
               <a><b>X team members</b></a>
             <br>
        <section>
-             <img src="img/48x48.svg"><a href="">Martin f</a>
+             <img src="images/48x48.svg"><a href="">Martin f</a>
            <br>
            <a><b>Martin f</b></a>
            <br>
