--- a/flexbox-nav-exercise.html
+++ b/flexbox-nav-exercise.html
@@ -9,16 +9,16 @@
 
 <body>
 <nav class="nav">
-    <ul class="item1">
+    <ul class="nav-bar-left">
         <li><a href="#Articles">Articles</a></li>
         <li><a href="#collection">Products</a></li>
         <li><a href="#about">Market</a></li>
         <li><a href="#contact">Jobs</a></li>
     </ul>
-    <ul class="item2 logo">
-        <li><a href="#Logo">Logo</a></li>
+    <ul class="nav-bar-logo">
+        <li><a href="#nav-bar-logo">Logo</a></li>
     </ul>
-    <ul class="item3">
+    <ul class="nav-bar-right">
         <li><a href="#Follow Us">Follow Us</a></li>
         <li><i class="fas fa-search"></i></li>
         <li><i class="fas fa-shopping-cart"></i></li>
