Feat: Photons update

--- a/photons.html
+++ b/photons.html
@@ -6,14 +6,23 @@
         <link rel="stylesheet" href="css/photons.css">
     </head>
 
+    <header>
+        <h2 class="header">Timothy Lefkowitz Studio</h2>
+    </header>
+
+    <nav class="nav">
+        <a href="">Photography</a>
+        <a href="">Realms</a>
+        <a href="">CODE</a>
+        <a href="">About</a>
+    </nav>
+
 <body>
-<main class="container">
-    <article class="card">
-        <section>
-            <div class="border green-box"></div>
-            <div class="border green-box"></div>
-            <div class="border green-box"></div>
-            <div class="border green-box"></div>
-        </section>
+
+    <div class="box1">
+        <img src="images/water_sculpture2.jpg" class="img">
+    </div>
+    <div class="box2"> </div>
+
 </body>
 </html>
