Feat:photons update

--- a/photons.html
+++ b/photons.html
@@ -18,11 +18,12 @@
     </nav>
 
 <body>
-
+    <div class="container">
     <div class="box1">
         <img src="images/water_sculpture2.jpg" class="img">
     </div>
     <div class="box2"> </div>
+    </div>
 
 </body>
 </html>
