--- a/codeupdesign.html
+++ b/codeupdesign.html
@@ -186,6 +186,10 @@
                 </div>
                 <div class="footer_container mt-5">
                     <div class="row">
+
+
+                        div
+
                         <span class="footer_reddot">D</span>
                         <span class="footer_orangedot">D</span>
                         <span class="footer_greendot">S</span>
@@ -216,6 +220,7 @@
 </body></title>
 </head>
 <body>
+
 
 </body>
 </html>
