--- a/defuse-the-dom.html
+++ b/defuse-the-dom.html
@@ -25,7 +25,7 @@
             if (detonationTimer == 0) {
                 alert('EXTERMINATE!');
                 document.body.innerHTML = '';
-                clearInterval(intervalId);
+                clearInterval();
             } else if (detonationTimer > 0) {
                 document.getElementById('timer').innerHTML = detonationTimer;
             }
