--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -8,42 +8,40 @@
 
 <script>
     $(document).ready(function () {
-        console.log("fully loaded and ready to go!")
+        $('h1').click(
+            function () {
+                $(this).css('background-color', '#FF0');
+            });
 
-        $("#header").css({'display':'flex', 'justifyContent':'center', 'alignItems':'center'});
-        $(".mainbody").css({'display':'flex', 'justifyContent':'center', 'alignItems':'center'});
-        $(".codeup").css({'display':'flex', 'justifyContent':'center', 'alignItems':'center'});
-        // $("#header").ready(function() {
-        //     alert('#header');
-        // })
-        alert($('#header').html());
-        alert($('#ul_list').html());
-        $('.codeup').css({'border':'1px solid lightgrey'});
-
-        // // Element selectors examples below vvv
-        // $('p').css({'font-size':'30px', 'backgroundColor':'purple', 'color' : 'fuchsia'});
-        $('li').css({'font-size':'20px', 'color':'grey'});
-        $('h1').css('color','grey',);
-        $('p').css('font-style','helvetia');
-        $('h1','p','li').css('fontWeight', 'bold')
-        // $('div').css({'background-color':'lavender', 'font-size':'50px', 'color':'red'});
-        // $('body').css('background-color', 'lightgrey');
-        // $('div').html('New text inside of my div tag, courtesy of jquery!')
-        // $('p').html('This is a brand new text in my p tag, cus jquery replaced it!')
-        //
-        // // all selector example below
-        // $('*').css({'font-style':'italic', 'font-family':'sans-serif'});
-        //
-        // // this ones neat, courtesy of Victor
-        // // $("*").click(function(){
-        //     $('*').hide()
-        // })
-        // $('*').dblclick(function(){
-        //     $('*').show()
-        // })
+        $('p').dblclick(
+            function () {
+                $(this).css('font-size', '18px');
+            });
+        $('li').hover(
+            function () {
+                $(this).css('color', 'red');
+            },
+            function(){
+                $(this).css('color', 'black')
+            });
     });
 
 </script>
+<style>
+    header{
+        display:flex;
+        justify-content: center;
+    }
+    .mainbody{
+        display:flex;
+        justify-content: center;
+    }
+    .codeup{
+        display:flex;
+        justify-content: center;
+    }
+
+</style>
 
 
 <body>
