--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -8,6 +8,10 @@
 
 <script>
     $(document).ready(function () {
+
+        $("#main").html("<h1>hfgsdgfd</h1>")
+
+
         $('h1').click(
             function () {
                 $(this).css('background-color', '#FF0');
@@ -43,6 +47,11 @@
 
 </style>
 
+<script>
+
+
+</script>
+
 
 <body>
 
@@ -50,7 +59,7 @@
         <h1>jquery is where it's at!</h1>
     </header>
     <br>
-    <main class="mainbody">
+    <main class="mainbody main">
         <p>jquery will make life easier.</p>
         <ul id="ul_list">
             <li class="codeup">Loading the entire page</li>
