--- a/mapboxlec.html
+++ b/mapboxlec.html
@@ -16,7 +16,7 @@
 
 <style>
     body {
-        background-color: papayawhip;
+        background-color: #9da3ab;
     }
     .mapcontainer{
         display: flex;
@@ -29,6 +29,7 @@
         display: flex;
         justify-content: center;
         text-align: center;
+        color: #f7fff7;
     }
 </style>
 <body>
