--- a/weather_map.html
+++ b/weather_map.html
@@ -12,10 +12,244 @@
     <!-- Custom CSS -->
 
     <title></title>
+<style>
+    map{
+        padding: 5% 5% 5% 5%;
+    }
+</style>
+
 </head>
+
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
+
+
+<!--- MapBox CDN --->
+
+
+
+<script src='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.js'></script>
+<link href='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.css' rel='stylesheet' />
+<script src="js/mapbox-geocoder-utils.js"></script>
+<script src="js/keys.js"></script>
+
+<!---- FONTS ---->
+
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Orelega+One&display=swap" rel="stylesheet">
+
+
+
+<script>
+    $(document).ready(function () {
+
+        "use strict";
+
+    $.get("https://api.openweathermap.org/data/2.5/weather", {
+        q: "San Antonio, US",
+        appid: OPEN_WEATHER_APPID,
+        units: "imperial",
+    }).done(function(results){
+        console.log(results)
+    })});
+
+
+
+    // // TODO: How can we get imperial units inst
+    // // ADDing units: "imperial" as an op
+    // // TODO: What are some additional ways we can get the weather from this API?-->
+    //  var searchbutton = document.querySelector('.searchbutton');
+    //  var inputValue = document.querySelector('.inputValue');
+    //  var name = document.querySelector('.name');
+    //  var desc = document.querySelector('.desc');
+    //  var temp = document.querySelector('.temp');
+
+// <!--        //-->
+//         $.get("https://api.openweathermap.org/data/2.5/weather", {
+//         appid: OPEN_WEATHER_APPID,
+//         lat: 29.423017,
+//         lon: -98.48527,
+//         units: "imperial",
+//         exclude:"current,minutely,hourly,alerts"
+//         }).done(function(results){
+//         var nameValue = results['name'];
+//         var tempValue = results['main']['temp'];
+//         var descValue = results['weather'][0]['description'];
+//         })
+
+
+// <!--        // searchbutton.addEventListener('click', function(){-->
+// <!--        //     fetch('https://api.openweathermap.org/data/2.5/weather?q='+inputValue.value+'&appid='+OPEN_WEATHER_APPID).then(response => response.json()).then(data => console.log(data))-->
+// <!--        //-->
+// <!--        //         .catch(eer => alert ("Wrong city name!"))-->
+// <!--        // })-->
+
+      //TODO: How can we incorporate mapbox with this? How can we make it dynami
+      // TODO: Explore the docs... what endpoint can we use to get a forecas
+      // TODO: What parameter can we include in order to get the daily forecast only-->
+
+   // $('#geocoder').append(geocoder.onAdd(map));-->
+
+
+
+
+</script>
+
+<script>
+
+    $(document).ready(function () {
+
+        "use strict";
+        mapboxgl.accessToken = mapboxtoken;
+        var map = new mapboxgl.Map({
+            container: 'map',
+            style: 'mapbox://styles/mapbox/streets-v9',
+            zoom: 10,
+            center: [-98.4916, 29.4252]
+        });
+    });
+</script>
+
+
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">Weather Map Project</a>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        </div>
+            <form class="d-flex">
+                <input class="form-control me-2 inputValue" type="search" placeholder="Enter a city" aria-label="Search">
+                <button class="btn btn-outline-success searchbutton" type="submit" value="Submit">Search</button>
+            </form>
+        </div>
+    </div>
+</nav>
+
+<style>
+    .row{
+        flex-wrap: nowrap;
+    }
+    .col{
+        flex-grow: 0;
+    }
+    #map{
+        display: flex;
+        justify-content: center;
+        width:80%;
+        height:400px;
+
+    }
+    .map {
+        display: flex;
+        justify-content: center;
+        padding-top:2em;
+
+    }
+    .days {
+        padding-top:2em;
+        width:80%;
+    }
+</style>
+
+
 <body>
 
-<h1>Weather Map Project</h1>
+
+<div class="container">
+    <div class="row days">
+
+        <div class="col">
+            <div class="card" style="width: 10rem;">
+                <div class="card-header">
+                    <a class="day1 text-center">10-16-1988</a>
+                </div>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item desc">Description:</li>
+                        <li class="list-group-item temp">Humidity:</li>
+                        <li class="list-group-item">Wind:</li>
+                        <li class="list-group-item">Pressure:</li>
+                    </ul>
+            </div>
+        </div>
+
+
+        <div class="col">
+            <div class="card" style="width: 10rem;">
+                <div class="card-header">
+                    <a class="day1 text-center">10-16-1988</a>
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">Description:</li>
+                    <li class="list-group-item">Humidity:</li>
+                    <li class="list-group-item">Wind:</li>
+                    <li class="list-group-item">Pressure:</li>
+                </ul>
+            </div>
+        </div>
+
+
+        <div class="col">
+            <div class="card" style="width: 10rem;">
+                <div class="card-header">
+                    <a class="day1 text-center">10-16-1988</a>
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">Description:</li>
+                    <li class="list-group-item">Humidity:</li>
+                    <li class="list-group-item">Wind:</li>
+                    <li class="list-group-item">Pressure:</li>
+                </ul>
+            </div>
+        </div>
+
+
+        <div class="col">
+            <div class="card" style="width: 10rem;">
+                <div class="card-header">
+                    <a class="day1 text-center">10-16-1988</a>
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">Description:</li>
+                    <li class="list-group-item">Humidity:</li>
+                    <li class="list-group-item">Wind:</li>
+                    <li class="list-group-item">Pressure:</li>
+                </ul>
+            </div>
+        </div>
+
+
+        <div class="col">
+            <div class="card" style="width: 10rem;">
+                <div class="card-header">
+                    <a class="day1 text-center">10-16-1988</a>
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">Description:</li>
+                    <li class="list-group-item">Humidity:</li>
+                    <li class="list-group-item">Wind:</li>
+                    <li class="list-group-item">Pressure:</li>
+                </ul>
+            </div>
+        </div>
+
+
+    </div>
+</div>
+
+
+
+
+<div class="map">
+    <div id='map'></div>
+</div>
 
 
 <h5>Tips</h5>
@@ -29,74 +263,6 @@
     <li>To add mapbox autocomplete search, you will need to include geocoder scripts from mapbox</li>
 </ul>
 
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.4.1.min.js"
-        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-        crossorigin="anonymous"></script>
-<script src="js/keys.js"></script>
-
-<script>
-    $(document).ready(function () {
-
-        "use strict";
-
-
-        // GET REQUEST to OpenWeatherMap using city parameter
-        // https://openweathermap.org/current
-
-
-        // $.get("https://api.openweathermap.org/data/2.5/weather", {
-        //     q: "San Antonio, US",
-        //     appid: OPEN_WEATHER_APPID,
-        //     units: "imperial",
-        // }).done(function(results){
-        //     console.log(results);
-        // })
-
-        // TODO: How can we get imperial units instead?
-
-        // ADDing units: "imperial" as an option
-
-
-        // TODO: What are some additional ways we can get the weather from this API?
-
-            $.get("https://api.openweathermap.org/data/2.5/weather", {
-            appid: OPEN_WEATHER_APPID,
-            lat: 29.423017,
-            lon: -98.48527,
-            units: "imperial",
-            exclude:"current,minutely,hourly,alerts"
-        }).done(function (results){
-            console.log(results);
-                $('#currentweather').html(results);
-        })
-
-
-
-        console.log(currentweather)
-
-
-        //TODO: How can we incorporate mapbox with this? How can we make it dynamic?
-
-
-        // TODO: Explore the docs... what endpoint can we use to get a forecast?
-
-        // TODO: What parameter can we include in order to get the daily forecast only
-
-
-
-    });
-
-
-</script>
-
-
-<h1 id="currentweather">dsa</h1>
 </body>
 </html>
