--- a/weather_map.html
+++ b/weather_map.html
@@ -53,13 +53,30 @@
 
         "use strict";
 
-    $.get("https://api.openweathermap.org/data/2.5/weather", {
-        q: "San Antonio, US",
-        appid: OPEN_WEATHER_APPID,
-        units: "imperial",
-    }).done(function(results){
-        console.log(results)
-    })});
+    window.onload = function() {
+
+        var weatherlist = [];
+
+        $.get("https://api.openweathermap.org/data/2.5/weather", {
+            q: "San Antonio, US",
+            appid: OPEN_WEATHER_APPID,
+            units: "imperial",
+        }).done(function(results) {
+            var weather = results.list;
+            console.log(results.list);
+
+            if (weather.dt_txt.split(" ")[1] === "09:00:00") {
+                weatherlist.push(weather);
+                console.log(weatherlist)
+            }
+        });
+
+        console.log(weatherlist)
+    }});
+
+
+
+
 
 
 
