--- a/es6-lec.html
+++ b/es6-lec.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
+
+<script src="js/es6.js"></script>
 <script>
 
     const items = 'apple';
@@ -57,10 +59,19 @@
 
 
     sayhelloAgain = (name) => {return `I love you, ${name}!`}
+
+    sum = (a,b) => {return a + b}
+
+
+
+    let sayhello2 = (name = "world") => `Hello ${name}!`
+
+
+
+
+
+
 </script>
-
-
-
 
 <body>
 
