--- a/mapbox_maps_api.html
+++ b/mapbox_maps_api.html
@@ -114,7 +114,7 @@
                 contents: "<a>The Hayden</a>",
             },
              {
-                name: "filling station",
+                name: "The Filling Station",
                 addr: "701 S St Mary's St, San Antonio, TX 78204",
                 contents: "<a>The Filling Station</a>",
             },
