--- a/weather_map.html
+++ b/weather_map.html
@@ -183,11 +183,11 @@
 
 
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-light">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">Weather Map Project</a>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        </div>
+        </d iv>
             <form class="d-flex">
                 <input class="form-control me-2 inputValue" type="search" placeholder="Enter a city" aria-label="Search">
                 <button class="btn btn-outline-success searchbutton" type="submit" value="Submit">Search</button>
